1)fixed radio and check buttons spacing issue. 2)added shadow to selected item in flowbox making it easy to tell apart   from non selected ones. 3)added highlight to selected list item, making it easier to find the   selected one.

--- a/scss/gtk-3.0/widgets/_list.scss
+++ b/scss/gtk-3.0/widgets/_list.scss
@@ -8,6 +8,10 @@ list {
   row {
     background: colors.$surface-strong;
     padding: config.$spacing-medium;
+    &:selected {
+      background: colors.$accent-normal;
+      color: colors.$black-strong;
+    }
     &:hover {
       background: colors.$surface-weakest;
       color: colors.$white-strong;
