--- a/scss/gtk-3.0/widgets/_menu.scss
+++ b/scss/gtk-3.0/widgets/_menu.scss
@@ -3,8 +3,20 @@
 
 menu {
   background: colors.$surface-weak;
+  border-radius: 3px;
+  border: 2px solid colors.$accent-light;
+  padding: 4px;
   menuitem {
     padding: config.$spacing-small;
+    check, radio {
+      &:first-child {
+      margin-right: 0.5em;
+      }
+      &:last-child {
+      margin-left: 0.5em;
+    }
+  }
+
     &:hover {
       background: colors.$yellow-normal;
       color: colors.$black-strong;
